--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Moji-recepti
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ReceptiDB
 spring.datasource.username=root
-spring.datasource.password=Anja11112004
+spring.datasource.password=578400
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
