--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
           java-version: '17'
         
       - name: Build Backend
-        run: mvn -f backend/pom.xml clean package
-
+        run: mvn -f backend/pom.xml -DskipTests
+        
   build-frontend:
     runs-on: ubuntu-latest
     needs: build-backend
