--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,19 +11,53 @@ on:
 jobs:
   build-backend:
     runs-on: ubuntu-latest
+    services:
+      mysql:
+        image: mysql:8
+        options: --env MYSQL_ROOT_PASSWORD=Anjaslovenija2023 --env MYSQL_DATABASE=ReceptiDB --health-cmd="mysqladmin ping --silent" --health-timeout=10s --health-retries=5 --health-start-period=30s
+        ports:
+          - 3306:3306
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
+          java-version: 17
           distribution: 'temurin'
-          java-version: '17'
-        
+
+      - name: Cache Maven dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
+      - name: Create application.properties for MySQL
+        run: |
+          echo "spring.datasource.url=jdbc:mysql://mysql:3306/ReceptiDB" > ./backend/src/main/resources/application.properties
+          echo "spring.datasource.username=root" >> ./backend/src/main/resources/application.properties
+          echo "spring.datasource.password=Anjaslovenija2023" >> ./backend/src/main/resources/application.properties
+          echo "spring.jpa.hibernate.ddl-auto=update" >> ./backend/src/main/resources/application.properties
+          echo "spring.jpa.show-sql=true" >> ./backend/src/main/resources/application.properties
+          echo "spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect" >> ./backend/src/main/resources/application.properties
+          echo "spring.application.name=Moji-recepti" >> ./backend/src/main/resources/application.properties
+          echo "server.port=8080" >> ./backend/src/main/resources/application.properties
+
+      - name: Wait for MySQL to be ready
+        run: |
+          until mysql -h 127.0.0.1 -u root -p'Anjaslovenija2023' -e 'SHOW DATABASES'; do
+            echo "Waiting for database to be ready..."
+            sleep 5
+          done
+
       - name: Build Backend
-        run: mvn -f backend/pom.xml -DskipTests
-        
+        run: mvn clean install --no-transfer-progress
+        working-directory: ./backend
+
   build-frontend:
     runs-on: ubuntu-latest
     needs: build-backend
@@ -31,18 +65,26 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: 18
+
+      - name: Cache npm modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       - name: Install Dependencies
         run: npm install
-        working-directory: frontend
-        
+        working-directory: ./frontend
+
       - name: Build Frontend
         run: npm run build
-        working-directory: frontend
+        working-directory: ./frontend
 
   test-backend:
     runs-on: ubuntu-latest
@@ -50,30 +92,35 @@ jobs:
     services:
       mysql:
         image: mysql:8
-        env:
-          MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
-          MYSQL_DATABASE: ReceptiDB
-        options: >-
-          --health-cmd="mysqladmin ping --silent"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=3
-          --name mysql
-          -p 3306:3306
+        options: --env MYSQL_ROOT_PASSWORD=Anjaslovenija2023 --env MYSQL_DATABASE=ReceptiDB --health-cmd="mysqladmin ping --silent" --health-timeout=10s --health-retries=5 --health-start-period=30s
+        ports:
+          - 3306:3306
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
+          java-version: 17
           distribution: 'temurin'
-          java-version: '17'
 
-      - name: Run Backend Tests
-        env:
-          SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/ReceptiDB
-          SPRING_DATASOURCE_USERNAME: root
-          SPRING_DATASOURCE_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+      - name: Cache Maven dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
+      - name: Wait for MySQL to be ready
         run: |
-          mvn -f backend/pom.xml clean test
+          until mysql -h 127.0.0.1 -u root -p'Anjaslovenija2023' -e 'SHOW DATABASES'; do
+            echo "Waiting for database to be ready..."
+            sleep 5
+          done
+
+      - name: Run Unit Tests
+        run: mvn test --no-transfer-progress
+        working-directory: ./backend
