--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,12 +64,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
+  
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
-
+  
       - name: Cache npm modules
         uses: actions/cache@v3
         with:
@@ -77,14 +77,14 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
-
+  
       - name: Install Dependencies
         run: npm install
-        working-directory: ./frontend
-
-      - name: Build Frontend
-        run: npm run build
-        working-directory: ./frontend
+        working-directory: .
+  
+      - name: Start Frontend Server
+        run: node server.js
+        working-directory: .
 
   test-backend:
     runs-on: ubuntu-latest
