--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     services:
       mysql:
         image: mysql:8
-        options: --env MYSQL_ROOT_PASSWORD=Anjaslovenija2023 --env MYSQL_DATABASE=ReceptiDB --health-cmd="mysqladmin ping --silent" --health-timeout=10s --health-retries=5 --health-start-period=30s
+        options: --env MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_PASSWORD }} --env MYSQL_DATABASE=ReceptiDB --health-cmd="mysqladmin ping --silent" --health-timeout=10s --health-retries=5 --health-start-period=30s
         ports:
           - 3306:3306
 
@@ -40,7 +40,7 @@ jobs:
         run: |
           echo "spring.datasource.url=jdbc:mysql://mysql:3306/ReceptiDB" > ./backend/src/main/resources/application.properties
           echo "spring.datasource.username=root" >> ./backend/src/main/resources/application.properties
-          echo "spring.datasource.password=Anjaslovenija2023" >> ./backend/src/main/resources/application.properties
+          echo "spring.datasource.password=${{ secrets.MYSQL_PASSWORD }}" >> ./backend/src/main/resources/application.properties
           echo "spring.jpa.hibernate.ddl-auto=update" >> ./backend/src/main/resources/application.properties
           echo "spring.jpa.show-sql=true" >> ./backend/src/main/resources/application.properties
           echo "spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect" >> ./backend/src/main/resources/application.properties
@@ -49,7 +49,7 @@ jobs:
 
       - name: Wait for MySQL to be ready
         run: |
-          until mysql -h 127.0.0.1 -u root -p'Anjaslovenija2023' -e 'SHOW DATABASES'; do
+          until mysql -h 127.0.0.1 -u root -p"${{ secrets.MYSQL_PASSWORD }}" -e 'SHOW DATABASES'; do
             echo "Waiting for database to be ready..."
             sleep 5
           done
@@ -95,7 +95,7 @@ jobs:
     services:
       mysql:
         image: mysql:8
-        options: --env MYSQL_ROOT_PASSWORD=Anjaslovenija2023 --env MYSQL_DATABASE=ReceptiDB --health-cmd="mysqladmin ping --silent" --health-timeout=10s --health-retries=5 --health-start-period=30s
+        options: --env MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_PASSWORD }} --env MYSQL_DATABASE=ReceptiDB --health-cmd="mysqladmin ping --silent" --health-timeout=10s --health-retries=5 --health-start-period=30s
         ports:
           - 3306:3306
 
@@ -119,7 +119,7 @@ jobs:
 
       - name: Wait for MySQL to be ready
         run: |
-          until mysql -h 127.0.0.1 -u root -p'Anjaslovenija2023' -e 'SHOW DATABASES'; do
+          until mysql -h 127.0.0.1 -u root -p"${{ secrets.MYSQL_PASSWORD }}" -e 'SHOW DATABASES'; do
             echo "Waiting for database to be ready..."
             sleep 5
           done
