--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,53 @@ jobs:
         run: mvn clean install --no-transfer-progress
         working-directory: ./backend
 
+  scan-backend:
+    runs-on: ubuntu-latest
+    needs: build-backend
+    services:
+      sonarqube:
+        image: sonarqube:latest
+        options: >-
+          --health-cmd="curl -f http://localhost:9000 || exit 1"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=10
+        ports:
+          - 9000:9000
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: 'temurin'
+
+      - name: Cache Maven dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
+      - name: Wait for SonarQube
+        run: |
+          echo "Waiting for SonarQube to be ready..."
+          until curl -s http://localhost:9000 > /dev/null; do
+            sleep 5
+          done
+
+      - name: Run SonarQube Analysis
+        run: |
+          mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+            -Dsonar.projectKey=com.ris:Moji-recepti \
+            -Dsonar.host.url=http://localhost:9000 \
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+        working-directory: ./backend
+
   build-frontend:
     runs-on: ubuntu-latest
     needs: build-backend
@@ -127,3 +174,4 @@ jobs:
       - name: Run Unit Tests
         run: mvn test --no-transfer-progress
         working-directory: ./backend
+
