--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,7 +93,7 @@ jobs:
       - name: Wait for SonarQube
         run: |
           echo "Waiting for SonarQube to be ready..."
-          until curl -s http://localhost:9000 > /dev/null; do
+          until curl -s -u admin:${{ secrets.SONAR_TOKEN }} http://localhost:9000/api/server/version > /dev/null; do
             sleep 5
           done
 
@@ -102,7 +102,7 @@ jobs:
           mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
             -Dsonar.projectKey=com.ris:Moji-recepti \
             -Dsonar.host.url=http://localhost:9000 \
-            -Dsonar.login=sqp_5e363f669b2c28751516d81b6ec0639f0c172cba
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
         working-directory: ./backend
 
   build-frontend:
