--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,6 +71,8 @@ jobs:
           --health-retries=10
         ports:
           - 9000:9000
+        env:
+          SONAR_ES_BOOTSTRAP_CHECKS_DISABLE: true
 
     steps:
       - name: Checkout code
@@ -93,7 +95,13 @@ jobs:
       - name: Wait for SonarQube
         run: |
           echo "Waiting for SonarQube to be ready..."
-          until curl -s -u admin:${{ secrets.SONAR_TOKEN }} http://localhost:9000/api/server/version > /dev/null; do
+          # Increased wait time and retries for SonarQube startup
+          for i in {1..60}; do
+            if curl -s -f -u admin:admin http://localhost:9000/api/server/version > /dev/null; then
+              echo "SonarQube is ready!"
+              break
+            fi
+            echo "Waiting for SonarQube to start... ($i/60)"
             sleep 5
           done
 
@@ -102,7 +110,8 @@ jobs:
           mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
             -Dsonar.projectKey=com.ris:Moji-recepti \
             -Dsonar.host.url=http://localhost:9000 \
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+            -Dsonar.login=admin \
+            -Dsonar.password=admin
         working-directory: ./backend
 
   build-frontend:
